--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nediya99.github.io/react-websit",
+  "homepage": "https://github.com/nediya99/website-react.git",
   "name": "website",
   "version": "0.1.0",
   "private": true,
